public/css/tooltip.css
#toastBox {
  position: absolute;
  bottom: 25px;
  right: 30px;
  display: flex;
  align-items: flex-end;
  flex-direction: column;
  overflow: hidden;
  padding: 20px;
  z-index: 10;
}

.toast {
  display: flex;
  position: relative;
  width: 20rem;
  height: 4rem;
  margin-top: 1rem;
  padding-right: 1rem;
  border-radius: 0.5rem;
  align-items: center;
  transform: translateX(100%);
  font-size: 0.8rem;
  animation: toast-move-left 0.2s linear forwards;
}

.toast i {
  margin: 0 1.5rem;
  font-size: 35px;
}

.toast::after {
  content: "";
  position: absolute;
  bottom: 0px;
  left: -1px;
  width: 100%;
  height: 0.35rem;
  animation: toast-fill 6000ms linear forwards;
  border-radius: 0 0 1rem 1rem;
}

.toast.success {
  background: yellowgreen;
  border: 3px solid green;
  box-shadow: 0 0 0.35rem 0.1rem green;
  color: darkgreen;
}

.toast.success i {
  color: darkgreen;
}

.toast.warning {
  background: gold;
  border: 3px solid darkgoldenrod;
  box-shadow: 0 0 0.35rem 0.1rem darkgoldenrod;
  color: darkgoldenrod;
}

.toast.warning i {
  color: darkgoldenrod;
}

.toast.error {
  background: tomato;
  border: 3px solid darkred;
  box-shadow: 0 0 0.35rem 0.1rem darkred;
  color: darkred;
}

.toast.error i {
  color: darkred;
}

.toast.success::after {
  background: green;
}

.toast.warning::after {
  background: darkgoldenrod;
}

.toast.error::after {
  background: darkred;
}

